--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/avatar": "^2.2.16",
     "@heroui/button": "2.2.20",
     "@heroui/code": "2.2.15",
     "@heroui/dropdown": "2.3.20",
@@ -17,6 +18,7 @@
     "@heroui/kbd": "2.2.16",
     "@heroui/link": "2.2.17",
     "@heroui/navbar": "2.2.18",
+    "@heroui/react": "^2.7.9",
     "@heroui/snippet": "2.2.21",
     "@heroui/switch": "2.2.18",
     "@heroui/system": "2.4.16",
