--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@heroui/avatar": "^2.2.16",
     "@heroui/button": "2.2.20",
     "@heroui/code": "2.2.15",
