--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@heroui/use-theme": "2.1.8",
     "@react-aria/visually-hidden": "3.8.23",
     "@react-types/shared": "3.29.1",
+    "@tabler/icons": "^3.34.0",
+    "@tabler/icons-react": "^3.34.0",
     "@vercel/analytics": "^1.5.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
+    "lucide-react": "^0.513.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
